--- a/ALVR/App.config
+++ b/ALVR/App.config
@@ -145,6 +145,9 @@
             <setting name="launchMinimized" serializeAs="String">
                 <value>False</value>
             </setting>
+            <setting name="controllerMode" serializeAs="String">
+                <value>0</value>
+            </setting>
         </ALVR.Properties.Settings>
     </userSettings>
 </configuration>
